--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Baloo+Chettan+2&family=Playfair+Display:wght@600&family=Poppins:wght@300;400&display=swap"
         rel="stylesheet" />
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://kit.fontawesome.com/38b4743dbf.js" crossorigin="anonymous"></script>
     <title>my 1st project</title>
 </head>
-
+ 
 <body>
     <nav id="navbar">
         <h1><span class="coza">COZA</span> <span class="store">STORE</span></h1>
@@ -28,10 +30,34 @@
     </nav>
 
     <section id="home">
-        <div class="container">
-            <h3 class="h-three">Women collection 2022</h3>
-            <h1 class="h-primary">NEW SEASON</h1>
-            <button><a href="#">SHOP NOW</a></button>
+        <div class="allcontent">
+            <div class="container" id="slide_1">
+                <img src="img/home.jpg" alt="">
+                <div>
+                    <h3 class="h-three">Women collection 2022</h3>
+                    <h1 class="h-primary">NEW SEASON</h1>
+                    <button><a href="#">SHOP NOW</a></button>
+                </div>
+            </div>
+
+            <div class="container" id="slide_2">
+                <img src="img/boy_home.jpg" alt="">
+                <div>
+                    <h3 class="h-three">Men New-Season</h3>
+                    <h1 class="h-primary">JACKETS & COATS</h1>
+                    <button><a href="#">SHOP NOW</a></button>
+                </div>
+            </div>
+
+            <div class="container" id="slide_3">
+                <img src="img/boy2_home.jpg" alt="">
+                <div>
+                    <h3 class="h-three">Men collection 2022</h3>
+                    <h1 class="h-primary">NEW ARRIVALS</h1>
+                    <button><a href="#">SHOP NOW</a></button>
+                </div>                
+            </div>
+            
         </div>
     </section>
 
@@ -67,7 +93,7 @@
     <section id="product">
         <h1>PRODUCT OVERVIEW</h1>
         <div class="container">
-            <div class="item">
+            <div class="item" data-aos="flip-left">
                 <div class="images">
                     <img src="img/p_product1.jpg" alt="" />
                     <span>
@@ -85,7 +111,7 @@
                 </div>
             </div>
 
-            <div class="item">
+            <div class="item" data-aos="zoom-out-up">
                 <div class="images">
                     <img src="img/p_product2.jpg" alt="" />
                     <span>
@@ -103,7 +129,7 @@
                 </div>
             </div>
 
-            <div class="item">
+            <div class="item" data-aos="zoom-out-up">
                 <div class="images">
                     <img src="img/p_product3.jpg" alt="" />
                     <span>
@@ -121,7 +147,7 @@
                 </div>
             </div>
 
-            <div class="item">
+            <div class="item" data-aos="flip-right">
                 <div class="images">
                     <img src="img/p_product4.jpg" alt="" />
                     <span>
@@ -139,7 +165,7 @@
                 </div>
             </div>
 
-            <div class="item">
+            <div class="item" data-aos="flip-left">
                 <div class="images">
                     <img src="img/p_product5.jpg" alt="" />
                     <span>
@@ -157,7 +183,7 @@
                 </div>
             </div>
 
-            <div class="item">
+            <div class="item" data-aos="zoom-out-up">
                 <div class="images">
                     <img src="img/p_product6.jpg" alt="" />
                     <span>
@@ -175,7 +201,7 @@
                 </div>
             </div>
 
-            <div class="item">
+            <div class="item" data-aos="zoom-out-up">
                 <div class="images">
                     <img src="img/p_product7.jpg" alt="" />
                     <span>
@@ -193,7 +219,7 @@
                 </div>
             </div>
 
-            <div class="item">
+            <div class="item" data-aos="flip-right">
                 <div class="images">
                     <img src="img/p_product8.jpg" alt="" />
                     <span>
@@ -211,7 +237,7 @@
                 </div>
             </div>
 
-            <div class="item">
+            <div class="item" data-aos="flip-left">
                 <div class="images">
                     <img src="img/p_product9.jpg" alt="" />
                     <span>
@@ -229,7 +255,7 @@
                 </div>
             </div>
 
-            <div class="item">
+            <div class="item" data-aos="zoom-out-up">
                 <div class="images">
                     <img src="img/p_product10.jpg" alt="" />
                     <span>
@@ -247,7 +273,7 @@
                 </div>
             </div>
 
-            <div class="item">
+            <div class="item" data-aos="zoom-out-up">
                 <div class="images">
                     <img src="img/p_product11.jpg" alt="" />
                     <span>
@@ -265,7 +291,7 @@
                 </div>
             </div>
 
-            <div class="item">
+            <div class="item" data-aos="flip-right">
                 <div class="images">
                     <img src="img/p_product12.jpg" alt="" />
                     <span>
@@ -316,13 +342,16 @@
                 <h3>NEWSLETTER</h3>
                 <input type="email" placeholder="email@gmail.com">
                 <div>
-                    <button>SUBSCRIBE</button>
+                    <button><span></span>SUBSCRIBE</button>
                 </div>
             </div>
         </div>
 
         <p class="para">Copyright &copy;2022 All rights reserved | This template is made by <span>Amy ;)</span></p>
     </section>
+    <script>
+        AOS.init();
+      </script>
 </body>
 
 </html>
